--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
 
 }
 
+
 .mt-ts::before {
     content: "";
     position: fixed;
@@ -24,17 +25,29 @@ body {
     background-color: #fff;
 }
 
-.mt-ts__timeline::before {
-    background: red;
-    transform: translateY(-190px);
+.test::before {
+    content: "";
+    position: fixed;
+    top: 0px;
+    left: 50%;
+    bottom: var(--timeline-current-position-bottom);
+    transform: translateX(-50%);
+    width: 4px;
+    background-color: var(--timeline-current-position-color);
+    transition: all 3s;
 }
 
+
+
+
 .mt-ts {
-    background-color: red;
+    background-color: white;
     width: calc(100% - 80px);
     max-width: 800px;
     margin: auto;
     position: relative;
+    --timeline-current-position-color: rgb(0, 163, 125);
+    --timeline-current-position-bottom: 0;
 }
 
 .mt-ts__event {
@@ -42,7 +55,7 @@ body {
     float: left;
     padding: 20px;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 0;
     clear: both;
     text-align: right;
     color: white;
@@ -59,7 +72,7 @@ body {
     position: absolute;
     width: 8px;
     height: 8px;
-    border: 4px solid #ffffff;
+    border: 4px solid var(--timeline-current-position-color);
     background-color: #1D1D1D;
     border-radius: 100%;
     right: -56px;
