--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,12 @@ body {
 .mt-ts__event--visible {
     opacity: 1 !important;
     transform: translate(0) !important;
-
 }
 
 
-.mt-ts::before {
+.mt-ts__timeline::before {
     content: "";
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 50%;
     bottom: 0px;
@@ -25,38 +24,41 @@ body {
     background-color: #fff;
 }
 
-.test::before {
+.mt-ts__timeline-current-position::before {
     content: "";
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 50%;
     bottom: var(--timeline-current-position-bottom);
     transform: translateX(-50%);
     width: 4px;
     background-color: var(--timeline-current-position-color);
-    transition: all 3s;
 }
 
 
-
-
 .mt-ts {
-    background-color: white;
-    width: calc(100% - 80px);
-    max-width: 800px;
+    background-color: transparent;
+    width: calc(100% - 100px);
+    /* max-width: 800px; */
+    width: 100%;
     margin: auto;
     position: relative;
     --timeline-current-position-color: rgb(0, 163, 125);
     --timeline-current-position-bottom: 0;
+    position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .mt-ts__event {
-    width: calc(50% - 80px);
-    float: left;
+    width: 500px;
     padding: 20px;
     padding-top: 50px;
     padding-bottom: 0;
-    clear: both;
     text-align: right;
     color: white;
     position: relative;
@@ -65,6 +67,7 @@ body {
     transition: all 2s;
     transform: translateX(-300px);
     opacity: 0;
+    right: 310px
 }
 
 .mt-ts__date::before {
@@ -85,10 +88,10 @@ body {
 }
 
 .mt-ts__event:nth-child(2n) {
-    float:right;
-    clear: both;
     text-align: left;
     transform: translateX(300px);
+    right: 0px;
+    left: 310px;
 }
 
 
