--- a/src/styles.css
+++ b/src/styles.css
@@ -1,106 +1,109 @@
 body {
-    padding: 0;
-    margin: 0;
-    box-sizing: content-box;
-    font-family: Helvetica, sans-serif;
-    height: 100%;
-    background-color: #1D1D1D;
+  padding: 0;
+  margin: 0;
+  box-sizing: content-box;
+  font-family: Helvetica, sans-serif;
+  height: 100%;
+  background-color: #1d1d1d;
 }
 
+.mt-ts {
+  background-color: transparent;
+  width: calc(100% - 100px);
+  /* max-width: 800px; */
+  width: 100%;
+  margin: auto;
+  position: relative;
+  --timeline-current-position-color: rgb(0, 163, 125);
+  --timeline-current-position-height: 0px;
+  position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .mt-ts__event--visible {
-    opacity: 1 !important;
-    transform: translate(0) !important;
+  opacity: 1 !important;
+  transform: translate(0) !important;
 }
-
 
 .mt-ts__timeline::before {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 50%;
-    bottom: 0px;
-    transform: translateX(-50%);
-    width: 4px;
-    background-color: #fff;
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  bottom: 0px;
+  transform: translateX(-50%);
+  width: 4px;
+  background-color: #fff;
 }
 
 .mt-ts__timeline-current-position::before {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 50%;
-    bottom: var(--timeline-current-position-bottom);
-    transform: translateX(-50%);
-    width: 4px;
-    background-color: var(--timeline-current-position-color);
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  height: var(--timeline-current-position-height);
+  transform: translateX(-50%);
+  width: 4px;
+  background-color: var(--timeline-current-position-color);
+  transition: all 2s;
 }
 
 
-.mt-ts {
-    background-color: transparent;
-    width: calc(100% - 100px);
-    /* max-width: 800px; */
-    width: 100%;
-    margin: auto;
-    position: relative;
-    --timeline-current-position-color: rgb(0, 163, 125);
-    --timeline-current-position-bottom: 0;
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .mt-ts__event {
-    width: 500px;
-    padding: 20px;
-    padding-top: 50px;
-    padding-bottom: 0;
-    text-align: right;
-    color: white;
-    position: relative;
-    display: grid;
-    grid-gap: 8px;
-    transition: all 2s;
-    transform: translateX(-300px);
-    opacity: 0;
-    right: 310px
+  width: 500px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: right;
+  color: white;
+  position: relative;
+  display: grid;
+  grid-gap: 12px;
+  transition: all 2s;
+  transform: translateX(-300px);
+  opacity: 0;
+  right: 310px;
 }
 
 .mt-ts__date::before {
-    content: "";
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    border: 4px solid var(--timeline-current-position-color);
-    background-color: #1D1D1D;
-    border-radius: 100%;
-    right: -56px;
-    width: 24px;
-    height: 24px;
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 4px solid var(--timeline-current-position-color);
+  background-color: #1d1d1d;
+  border-radius: 100%;
+  right: -56px;
+  width: 24px;
+  height: 24px;
 }
 
 .mt-ts__event:nth-child(2n) .mt-ts__date::before {
-    left: -56px;
+  left: -56px;
 }
 
 .mt-ts__event:nth-child(2n) {
-    text-align: left;
-    transform: translateX(300px);
-    right: 0px;
-    left: 310px;
+  text-align: left;
+  transform: translateX(300px);
+  right: 0px;
+  left: 310px;
 }
 
-
 .mt-ts__date {
-    font-size: 28px;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .mt-ts__header {
-    font-size: 24px;
+  font-size: 24px;
 }
 
-
+.mt-ts__content {
+  font-size: 20px;
+}
