--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,8 @@ body {
   background-color: #1d1d1d;
 }
 
-.mt-ts {
-  background-color: transparent;
-  width: calc(100% - 100px);
-  /* max-width: 800px; */
+.mt-ts__container {
   width: 100%;
-  margin: auto;
   position: relative;
   --timeline-current-position-color: rgb(0, 163, 125);
   --timeline-current-position-height: 0px;
@@ -21,9 +17,28 @@ body {
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  background-image: url(../examples/portrait.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.mt-ts__content-wrapper {
+  width: calc(100% - 240px);
+  margin-top: 120px;
+  margin-bottom: 120px;
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 140px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15.8px);
+  -webkit-backdrop-filter: blur(15.8px);
+  border: 1px solid rgba(255, 255, 255, 0.34);
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
+
 .mt-ts__event--visible {
   opacity: 1 !important;
   transform: translate(0) !important;
@@ -32,12 +47,16 @@ body {
 .mt-ts__timeline::before {
   content: '';
   position: absolute;
-  top: 0px;
+  top: 20px;
   left: 50%;
-  bottom: 0px;
+  bottom: 20px;
   transform: translateX(-50%);
   width: 4px;
   background-color: #fff;
+  border-color: red;
+  border: gray;
+  border-style: solid;
+  border-radius: 20px;
 }
 
 .mt-ts__timeline-current-position::before {
@@ -55,45 +74,24 @@ body {
 
 
 .mt-ts__event {
-  width: 500px;
-  padding-left: 20px;
-  padding-right: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
-  text-align: right;
-  color: white;
+  color: black;
   position: relative;
   display: grid;
-  grid-gap: 12px;
-  transition: all 2s;
-  transform: translateX(-300px);
-  opacity: 0;
-  right: 310px;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 48px;
+  max-width: 70%;
 }
 
-.mt-ts__date::before {
-  content: '';
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border: 4px solid var(--timeline-current-position-color);
-  background-color: #1d1d1d;
-  border-radius: 100%;
-  right: -56px;
-  width: 24px;
-  height: 24px;
+.mt-ts__column-one {
+  text-align: right;
 }
 
-.mt-ts__event:nth-child(2n) .mt-ts__date::before {
-  left: -56px;
-}
-
-.mt-ts__event:nth-child(2n) {
+.mt-ts__column-two {
   text-align: left;
-  transform: translateX(300px);
-  right: 0px;
-  left: 310px;
 }
+
 
 .mt-ts__date {
   font-size: 32px;
